--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página de Login</title>
     <link rel="stylesheet" href="/estilos/style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça o login para acessar a sua conta e personalizar o seu ambiente</p>
                 <form action="login.php" method="post">
-                    
+
                 </form>
             </div>
         </section>
