--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
-    <link rel="stylesheet" href="/estilos/style.css">
+   <link rel="stylesheet" href="estilo/mobile.css">
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                <!-- foto -->
+                <!-- aqui vai a imagem no CSS -->
             </div>
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça o login para acessar a sua conta e personalizar o seu ambiente</p>
                 <form action="login.php" method="post">
-                    
                 </form>
             </div>
         </section>
